appId: com.naschat.app
---
- runScript:
    file: ../setupServer.js
    env:
        SERVER_PATH: ?users&follows&posts&feeds
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"

# Pin alice's feed
- extendedWaitUntil:
    visible: "Open drawer menu"
- tapOn: "Open drawer menu"
- tapOn:
    id: "profileCardButton"
- tapOn:
    id: "profilePager-selector-5"
- tapOn: "alice-favs"
- tapOn: "Pin to Home"
- tapOn:
    id: "bottomBarHomeBtn"
- assertNotVisible: "Feeds ✨"
- assertVisible:
    id: "homeScreenFeedTabs-selector-0"
    text: "Following"
- assertVisible:
    id: "homeScreenFeedTabs-selector-1"
    text: "alice-favs"

# Set alice-favs first
- tapOn: "Open drawer menu"
- tapOn:
    id: "menuItemButton-Feeds"
- tapOn:
    id: "editFeedsBtn"
- swipe:
    label: "Drag feed down"
    from:
      id: "feed-drag-handle"
    direction: "DOWN"
    duration: 1000
- tapOn:
      label: "Save button"
      id: "saveChangesBtn"
- tapOn: "Go back"
- assertVisible:
    id: "homeScreenFeedTabs-selector-0"
    text: "alice-favs"
- assertVisible:
    id: "homeScreenFeedTabs-selector-1"
    text: "Following"

# Set following first
- tapOn: "Open drawer menu"
- tapOn:
    id: "menuItemButton-Feeds"
- tapOn:
    id: "editFeedsBtn"
- swipe:
    label: "Drag feed down"
    from:
      id: "feed-drag-handle"
    direction: "DOWN"
    duration: 1000
- tapOn:
    label: "Save button"
    id: "saveChangesBtn"
- tapOn: "Go back"
- assertVisible:
    id: "homeScreenFeedTabs-selector-0"
    text: "Following"
- assertVisible:
    id: "homeScreenFeedTabs-selector-1"
    text: "alice-favs"

# Remove following
- tapOn: "Open drawer menu"
- tapOn:
    id: "menuItemButton-Feeds"
- tapOn:
    id: "editFeedsBtn"
- tapOn:
    label: "Tap on unpin"
    id: "feed-timeline-togglePin"
- tapOn:
      label: "Save button"
      id: "saveChangesBtn"
- tapOn: "Go back"
- assertVisible:
    id: "homeScreenFeedTabs-selector-0"
    text: "alice-favs"
- assertNotVisible: "Following"
