appId: com.naschat.app
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: "?users"
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eSignInAlice"
- extendedWaitUntil:
    visible:
      id: "viewHeaderHomeFeedPrefsBtn"

- tapOn:
    id: "e2eStartOnboarding"
- tapOn: "Select an avatar"
- waitForAnimationToEnd
- assertVisible: "Photos"
- assertVisible: "Collections"
- tapOn:
    point: "50%,22%"
- waitForAnimationToEnd
- tapOn: "Done"
- waitForAnimationToEnd
- tapOn:
    id: "onboardingContinue"
- assertVisible: "What are your interests?"
- tapOn:
    id: "onboardingContinue"
- assertVisible: "Suggested for you"
# mock server doesn't have suggestions api
- tapOn: "Skip to next step"
- swipe:
    direction: "LEFT"
- swipe:
    direction: "LEFT"
- assertVisible: "Complete onboarding and start using your account"
- tapOn:
    id: "onboardingFinish"
- tapOn:
    label: "NUX, if applicable"
    text: "Close"
    optional: true
- waitForAnimationToEnd
- assertVisible: "Following"
